k8s-apps/app-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-v1
  namespace: core-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-portal
      version: v1
  template:
    metadata:
      labels:
        app: payment-portal
        version: v1
    spec:
      containers:
      - name: payment-api
        image: mockserver/mockserver:latest
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-v1
  namespace: core-services
spec:
  ports:
  - port: 80
    targetPort: 1080
  selector:
    app: payment-portal
    version: v1
