k8s-apps/finops.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexcore-finops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finops-dashboard
  namespace: nexcore-finops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finops-dashboard
  template:
    metadata:
      labels:
        app: finops-dashboard
    spec:
      containers:
      - name: metrics-display
        image: nginx:alpine
        ports:
        - containerPort: 80
        # 👇 CONFIGURAÇÃO PROFISSIONAL DE FINOPS E RESILIÊNCIA
        resources:
          requests:
            memory: "64Mi"   # O mínimo de RAM que o Kubernetes reserva para este container iniciar
            cpu: "50m"       # O mínimo de processamento garantido (50 mili-cores)
          limits:
            memory: "128Mi"  # O teto máximo de RAM para evitar que ele roube recursos de outros Pods
            cpu: "100m"      # O teto máximo de processamento (10% de 1 core)
---
apiVersion: v1
kind: Service
metadata:
  name: finops-service
  namespace: nexcore-finops
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: finops-dashboard
