k8s-apps/keycloak-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: core-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: bitnami/keycloak:latest
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: core-services
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
